--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="Flores del Tambo"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="./Logo-FloresAromáticas.png" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App</title>
+    <title>Flores del Tambo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
