--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="../src/assets/img/Logo tambo black.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -10,7 +10,6 @@
       name="Flores del Tambo"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="./Logo-FloresAromáticas.png" />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
